fix block label alignment, add block label alignment to dmHTML body richtext field, tweak forms css
git-svn-id: https://farcry.jira.com/svn/FC/trunk@12696 8f7d33b6-1012-0410-9a5a-bb7ecce9c363

--- a/webtop/css/webtop7.css
+++ b/webtop/css/webtop7.css
@@ -1019,6 +1019,14 @@ legend {
 	border-color: #eee;
 }
 
+legend + .control-group {
+	margin-top: 0;
+}
+
+.control-group {
+	margin-bottom: 20px;
+}
+
 .form-horizontal .control-label {
 	text-align: left;
 	width: 240px;
@@ -1081,6 +1089,13 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 	padding: 4px 8px;
 	background: #ddd;
 }
+
+
+/* fix br clear */
+br[style^="clear:both"] {
+	display: none;
+}
+
 
 /* MEDIA QUERIES AND RESPONSIVE RELATED STYLES */
 
